Adjusted strings for settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,34 +141,35 @@
     <string name="pref_show_trending">show trending subreddits on the front page</string>
     <string name="pref_clickgadget">show me links I\'ve recently viewed</string>
     <string name="pref_compress">compress the link display</string>
-    <string name="pref_domain_details">show additional details in the domain text when available</string>
-    <string name="pref_hide_ups">don\'t show me submissions after I\'ve upvoted them</string>
-    <string name="pref_hide_downs">don\'t show me submissions after I\'ve downvoted them</string>
-    <string name="pref_numsites">display %s links at once</string>
-    <string name="pref_min_link_score">don\'t show me submissions with a score less than %s</string>
+    <string name="pref_domain_details">show more domain details</string>
+    <string name="pref_hide_ups">hide submissions after upvoting</string>
+    <string name="pref_hide_downs">hide submissions after downvoting</string>
+    <string name="pref_numsites">number of links to show</string>
+    <string name="pref_min_link_score">minimum score to display</string>
     <string name="pref_ignore_suggested_sort">ignore suggested sorts</string>
-    <string name="pref_highlight_controversial">show a dagger (†) on comments voted controversial</string>
-    <string name="pref_min_comment_score">don\'t show me comments with a score less than %s</string>
-    <string name="pref_num_comments">display %s comments by default</string>
-    <string name="pref_threaded_messages">show message conversations in the inbox</string>
-    <string name="pref_collapse_read_messages">collapse messages after I\'ve read them</string>
-    <string name="pref_mark_messages_read">mark messages as read when I open my inbox</string>
-    <string name="pref_monitor_mentions">notify me when people say my username</string>
+    <string name="pref_highlight_controversial">show controversial comments (†)</string>
+    <string name="pref_min_comment_score">minimum score to display</string>
+    <string name="pref_num_comments">number of comments to show</string>
+    <string name="pref_threaded_messages">show message conversations</string>
+    <string name="pref_collapse_read_messages">collapse messages after reading</string>
+    <string name="pref_mark_messages_read">mark messages read when opening inbox</string>
+    <string name="pref_monitor_mentions">notify me when I\'m mentioned</string>
     <string name="pref_enable_default_themes">allow subreddits to show me custom themes</string>
     <string name="pref_show_flair">show user flair</string>
     <string name="pref_show_link_flair">show link flair</string>
-    <string name="pref_over_18">I am over 18 years old and willing to view adult content</string>
-    <string name="pref_label_nsfw">label posts that are not safe for work (nsfw)</string>
+    <string name="pref_over_18">over 18</string>
+    <string name="pref_over_18_summary">I am over 18 years old and willing to view adult content</string>
+    <string name="pref_label_nsfw">label posts that are nsfw</string>
     <string name="pref_label_nsfw_summary">requires not \'safer for work\' mode</string>
     <string name="pref_private_feeds">enable private rss feeds</string>
     <string name="pref_public_votes">make my votes public</string>
-    <string name="pref_research">allow my data to be used for research purposes</string>
-    <string name="pref_hide_from_robots">don\'t allow search engines to index my user profile</string>
-    <string name="pref_beta">I would like to beta test features for reddit</string>
+    <string name="pref_research">use my data for research</string>
+    <string name="pref_hide_from_robots">hide me from search engines</string>
+    <string name="pref_beta">enable beta test features</string>
     <string name="pref_hide_ads">hide ads</string>
     <string name="pref_store_visits">remember what links I\'ve visited</string>
     <string name="pref_highlight_new_comments">highlight new comments</string>
     <string name="pref_show_gold_expiration">show gold expiration</string>
-    <string name="pref_creddit_autorenew">use a creddit to automatically renew my gold if it expires</string>
+    <string name="pref_creddit_autorenew">automatically renew gold</string>
 
 </resources>
