--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <resources>
 
     <!-- Application -->
@@ -144,6 +148,7 @@
     <string name="user_signed_out">signed out</string>
 
     <!-- Settings -->
+    <string name="settings_fragment_title">settings</string>
     <string name="pref_lang">interface language</string>
     <string name="pref_lang_summary">this does not affect the language of HTN</string>
     <string name="pref_newwindow">open links in a new window</string>
