--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,7 @@
     <string name="error_404">page not found</string>
     <string name="error_500">reddit is experiencing issues, try again later</string>
     <string name="error_503">reddit is unavailable, try again soon</string>
+    <string name="error_520">reddit is in maintenance</string>
 
     <!-- Miscellaneous -->
     <string name="username">/u/%s</string>
