Fixed issues with deserialization of ListingResponse vs TrophyResponse

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="navigation_tabs_downvoted">downvoted</string>
     <string name="navigation_tabs_hidden">hidden</string>
     <string name="navigation_tabs_saved">saved</string>
+    <string name="user_profile_summary_created">redditor since %s</string>
     <string name="user_link_karma">link karma</string>
     <string name="user_comment_karma">comment karma</string>
     <string name="user_note_label">note</string>
