--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="user_trophies_label">trophies</string>
     <string name="user_friend_add_button_text">add to friends</string>
     <string name="user_friend_delete_button_text">remove from friends</string>
+    <string name="user_friend_add_error">friend note cannot be empty</string>
 
     <!-- Ads -->
     <string name="advertisement">advertisement</string>
