Disabled analytics unless preference is enabled

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,5 +206,6 @@
     <string name="pref_highlight_new_comments">highlight new comments</string>
     <string name="pref_show_gold_expiration">show gold expiration</string>
     <string name="pref_creddit_autorenew">automatically renew gold</string>
+    <string name="pref_allow_analytics">allow collection of anonymous usage data</string>
 
 </resources>
