--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,5 +212,9 @@
     <string name="pref_show_gold_expiration">show gold expiration</string>
     <string name="pref_creddit_autorenew">automatically renew gold</string>
     <string name="pref_allow_analytics">allow collection of usage data</string>
+    <string name="dialog_nsfw_title">Over 18?</string>
+    <string name="dialog_nsfw_message">You must be over 18 to view content on this subreddit</string>
+    <string name="dialog_nsfw_confirm">Continue</string>
+    <string name="dialog_nsfw_decline">Take me back</string>
 
 </resources>
