Displaying error when attempting to access a private subreddit unauthorized

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,6 +222,7 @@
   <string name="user_friend_delete_error">error removing friend</string>
   <string name="error_xxx">an error has occurred</string>
   <string name="error_network_unavailable">network is unavailable</string>
+  <string name="error_private_subreddit">this subreddit is private</string>
   <string name="error_404">page not found</string>
   <string name="error_500">reddit is experiencing issues, try again later</string>
   <string name="error_503">reddit is unavailable, try again soon</string>
