Implemented option to mark individual messages read

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,9 +119,10 @@
   <string name="action_reply">reply</string>
   <string name="action_show_permalink">permalink</string>
   <string name="action_block_user">block user</string>
+  <string name="action_mark_messages_read">mark messages read</string>
+  <string name="action_mark_message_read">mark read</string>
   <string name="action_mark_message_unread">mark unread</string>
   <string name="action_message_reply">reply</string>
-  <string name="action_mark_messages_read">mark messages read</string>
 
   <!-- Dialogs -->
   <string name="dialog_sign_out_title">Sign out</string>
