Fixed some lint issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,7 +161,7 @@
   <string name="pref_min_comment_score">minimum score to display</string>
   <string name="pref_min_comment_score_hint">@string/pref_min_link_score_hint</string>
   <string name="pref_num_comments">number of comments to show</string>
-  <string name="pref_num_comments_hint">(1 - 500)</string>
+  <string name="pref_num_comments_hint">(1 – 500)</string>
   <string name="pref_threaded_messages">show message conversations</string>
   <string name="pref_collapse_read_messages">collapse messages after reading</string>
   <string name="pref_mark_messages_read">mark messages read when opening inbox</string>
