--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,7 +134,7 @@
 
   <!-- Miscellaneous -->
   <string name="nsfw">nsfw</string>
-  <string name="username">/u/%s</string>
+  <string name="username_formatter">/u/%s</string>
   <string name="user_required">you must sign in to do that</string>
   <string name="implementation_pending">coming soon</string>
   <string name="welcome_user">welcome, %s</string>
