--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -300,5 +300,11 @@
     <string name="user_friend_note_label">note</string>
     <string name="user_friend_empty_note">friend note cannot be empty</string>
     <string name="user_friend_note_save_button">save</string>
+    <string name="unread_inbox_notification_service_label">Notification check service</string>
+    <string name="unread_inbox_notification_channel_name">Unread inbox messages</string>
+    <plurals name="unread_inbox_notification_title">
+        <item quantity="one">%s unread notification</item>
+        <item quantity="other">%s unread notifications</item>
+    </plurals>
 
 </resources>
