--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,6 +220,21 @@
     <string name="pref_store_visits">remember what links I\'ve visited</string>
     <string name="pref_show_gold_expiration">show gold expiration</string>
     <string name="pref_creddit_autorenew">automatically renew gold</string>
+
+    <string name="pref_color_scheme">color scheme</string>
+    <string-array name="pref_color_scheme_entries">
+        <item>@string/color_scheme_light</item>
+        <item>@string/color_scheme_dark</item>
+    </string-array>
+    <string name="color_scheme_light">light</string>
+    <string name="color_scheme_dark">dark</string>
+    <string-array name="pref_color_scheme_values">
+        <item>@string/color_scheme_light_value</item>
+        <item>@string/color_scheme_dark_value</item>
+    </string-array>
+    <string name="color_scheme_light_value">light</string>
+    <string name="color_scheme_dark_value">dark</string>
+
     <string name="pref_font">font</string>
     <string-array name="pref_font_entries">
         <item>@string/font_system</item>
