--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -292,6 +292,7 @@
     <string name="user_friend_note_save_button">save</string>
     <string name="unread_inbox_notification_service_label">Notification check service</string>
     <string name="unread_inbox_notification_channel_name">Unread inbox messages</string>
+    <string name="error_opening_url_in_browser">Error opening link URL</string>
     <plurals name="unread_inbox_notification_title">
         <item quantity="one">%s unread notification</item>
         <item quantity="other">%s unread notifications</item>
